--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ httpx==0.26.0
 idna==3.6
 numpy==1.26.3
 openai==1.8.0
+PyAudio==0.2.14
 pycparser==2.21
 pydantic==2.5.3
 pydantic_core==2.14.6
@@ -21,7 +22,6 @@ pyobjc-framework-Quartz==10.1
 python-dotenv==1.0.0
 six==1.16.0
 sniffio==1.3.0
-sounddevice==0.4.6
 tqdm==4.66.1
 typing_extensions==4.9.0
 Wave==0.0.2
