--- a/requirements.txt
+++ b/requirements.txt
@@ -14,11 +14,11 @@ pycparser==2.21
 pydantic==2.5.3
 pydantic_core==2.14.6
 pynput==1.7.6
-pyobjc-core==10.1
-pyobjc-framework-ApplicationServices==10.1
-pyobjc-framework-Cocoa==10.1
-pyobjc-framework-CoreText==10.1
-pyobjc-framework-Quartz==10.1
+pyobjc-core==10.1 ; platform_system == "Darwin"
+pyobjc-framework-ApplicationServices==10.1 ; platform_system == "Darwin"
+pyobjc-framework-Cocoa==10.1 ; platform_system == "Darwin"
+pyobjc-framework-CoreText==10.1 ; platform_system == "Darwin"
+pyobjc-framework-Quartz==10.1 ; platform_system == "Darwin"
 python-dotenv==1.0.0
 six==1.16.0
 sniffio==1.3.0
