--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.6.0
 anyio==4.2.0
 certifi==2023.11.17
 cffi==1.16.0
+coverage==7.4.0
 distro==1.9.0
 h11==0.14.0
 httpcore==1.0.2
@@ -23,6 +24,7 @@ pyobjc-framework-Cocoa==10.1
 pyobjc-framework-CoreText==10.1
 pyobjc-framework-Quartz==10.1
 pytest==7.4.4
+pytest-cov==4.1.0
 python-dotenv==1.0.0
 six==1.16.0
 sniffio==1.3.0
