--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 .venv
 .DS_Store
 src/.env
-src/__pycache__/
-src/__pycache__/__init__.cpython-311.pyc
+src/__pycache__/*
 src/data/tmp/*.wav
 __pycache__/
 .coverage
